--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,496 @@
-audio::-webkit-media-controls-mute-button {
+html {
+    background-color: #020659;
+}
 
+body {
+    margin: 0 auto;
+    width: 375px;
+    color: #ffffff;
+    background-color: #ffffff;
+}
+
+header {
+    background-image: linear-gradient(to right, #2104D9, #020659, black);
+    padding-top: 50px;
+    padding-bottom: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+h1 {
+    font-size: 20px;
+    line-height: 2em;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+h2 {
+    color: #590242;
+    font-size: 20px;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+h3 {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+header p {
+    font-size: 16px;
+    color: #ffffff;
+}
+
+a:hover, input:hover {
+    background-color: #590242;
+}
+
+li a {
+    display: block;
+    padding: 20px 20px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+h2 h3 {
+    font-size: 20px;
+    color: #590242
+}
+
+h1, h2, h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+dl {
+    color: #590242;
+    display: flex;
+    margin-top: -10px;
+}
+
+.trending h3 {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.trending h3, .trending dl {
+    color: #590242;
+}
+
+dt {
+    padding-right: 5px;
+    font-style: italic;
+    font-weight: light;
+    font-size: 16px;
+}
+
+dd {
+    font-size: 16px;
+    margin: 0;
+}
+
+.more {
+    text-decoration: none;
+    background-color: #590242;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    width: 150px;
+    display: block;
+    text-align: center;
+    margin: 10px 0 30px 32px;
+    font-size: 14px;
+}
+
+.more:hover {
+    background-color: #020659;
+}
+
+.playlists p, .curated p {
+    color: #ffffff;
+    font-size: 14px;
+}
+
+footer {
+    
+    padding-bottom: 10px;
+    color: #590242;
+    text-align: center;
+}
+
+
+@media screen and (min-width:834px) {
+    body {
+        width: 834px;
+    }
+
+    span, input, label {
+        display: none;
+    }
+
+    nav {
+        width: 834px;
+    }
+
+    ul {
+        overflow: visible;
+        position: absolute;
+        top: 0;
+        width: 834px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 63px;
+        align-items: center;
+    }
+
+    li {
+        padding: 0;
+        margin: 0;
+    }
+
+    li a, [href="#home"] {
+        box-sizing: border-box;
+        padding: 12px;
+        height: 100%;
+    }
+
+    [href="#home"] {
+        position: static;
+    }
+
+    nav a {
+        display: block;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 417px 417px;
+    }
+
+    h2 {
+        margin: left;
+    }
+
+    .trending {
+        width: 834px;
+        grid-column: 1/3;
+    }
+
+    .playlists {
+        width: 417px;
+        grid-column: 1/2;
+    }
+
+    .curated {
+        width: 417px;
+        grid-column: 2/3;
+    }
+
+    .playlists section, .curated section {
+        height: 120px;
+        width: 360px;
+    }
+
+    .playlists img, .curated img {
+        float: left;
+        margin-right: 10px;
+        padding-bottom: 10px;
+    }
+
+    .playlists p, .curated p {
+        position: absolute;
+        top: 27px;
+        left: 170px;
+        padding-right: 30px;
+    }
+
+    .playlists .scroll, .curated .scroll {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 515px;
+        grid-template-rows: repeat(5, 40px);
+        grid-template-columns: 417px;
+        row-gap: 120px;
+    }
+
+    .more {
+        float: right;
+        margin: 10px 32px 30px 0;
+    }
+}   
+
+
+
+
+nav {
+    width: 375px;
+    background-color: #030ABC;
+    position: absolute;
+    top: 0;
+    text-transform: uppercase;
+    height: 60px;
+    text-decoration: none;
+    list-style: none;
+}
+
+ul {
+    background-color: #2104D9;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+    margin: 0;
+}
+
+nav ul {
+    text-align: center;
+}
+
+[href="#home"] {
+    text-transform: capitalize;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 30px;
+    top: 0;
+    left: 90px;
+    padding: 16px 16px;
+}
+label {
+    cursor: pointer;
+    display: inline-block;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
+label span {
+    background-color: #ffffff;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background-color .2s ease-out;
+    width: 18px;
+}
+label span:before, label span:after {
+    background: #ffffff;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+label span:before {
+    top: 5px;
+}
+label span:after {
+    top: -5px;
+}
+input {
+    display: none;
+}
+input:checked ~ ul {
+    max-height: 500px;
+}
+input:checked ~ label span {
+    background: transparent;
+}
+input:checked ~ label span:before {
+    transform: rotate(-45deg);
+}
+input:checked ~ label span:after {
+    transform: rotate(45deg);
+}
+input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
+    top: 0;
+}
+
+
+
+@media screen and (min-width:834px) {
+    body {
+        width: 834px;
+    }
+
+    labal span, input {
+        display: none;
+    }
+
+    nav {
+        width: 834px;
+    }
+
+    ul {
+        overflow: visible;
+        position: absolute;
+        top: 0;
+        width: 834px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 63px;
+        align-items: center;
+    }
+
+    li {
+        padding: 0;
+        margin: 0;
+    }
+
+    li a, [href="#home"] {
+        box-sizing: border-box;
+        padding: 12px;
+        height: 100%;
+    }
+
+    [href="#home"] {
+        position: static;
+    }
+
+    nav a {
+        display: block;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 417px 417px;
+    }
+
+    h2 {
+        margin: left;
+    }
+
+    .trending {
+        width: 834px;
+        grid-column: 1/3;
+    }
+
+    .playlists {
+        width: 417px;
+        grid-column: 1/2;
+    }
+
+    .curated {
+        width: 417px;
+        grid-column: 2/3;
+    }
+
+    .playlists section, .curated section {
+        height: 120px;
+        width: 360px;
+    }
+
+    .playlists img, .curated img {
+        float: left;
+        margin-right: 10px;
+        padding-bottom: 10px;
+    }
+
+    .playlists p, .curated p {
+        position: absolute;
+        top: 27px;
+        left: 170px;
+        padding-right: 30px;
+    }
+
+    .playlists .scroll, .curated .scroll {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 515px;
+        grid-template-rows: repeat(5, 40px);
+        grid-template-columns: 417px;
+        row-gap: 120px;
+    }
+
+    .more {
+        float: right;
+        margin: 10px 32px 30px 0;
+    }
+}   
+
+audio {
+    position: absolute;
+    bottom: 150px;
+    left: 5px;
+}
+
+
+
+audio::-webkit-media-controls-mute-button {
+    background-color: #ffffff;
+    border-radius: 50%;
 }
 audio::-webkit-media-controls-play-button {
-
+    background-color: #ffffff;
+    border-radius: 50%;
 }
 audio::-webkit-media-controls-enclosure {
+    background-color: rgba(255, 255, 255, .5);
+}
 
+
+
+.scroll {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.scroll section {
+    margin: 10px;
+    position: relative;
+}
+
+.scroll div {
+    position: absolute;
+    top: 251px;
+    background-color: rgba(255, 255, 255, .75);
+    padding: 5px;
+    height: 50px;
+    width: 350px;
+}
+
+.playlists .scroll {
+    background-color: #2699FB;
+}
+
+.curated .scroll {
+    background-color: #030A8C;
+}
+
+.playlists section {
+    background-color: #0D8DFD;
+    text-align: center;
+    padding: 10px;
+}
+
+.curated section {
+    background-color: #020873;
+    text-align: center;
+    padding: 10px;
 }
 
 #trending ::-webkit-scrollbar {
-
+    width: 15px;
 }
 #trending ::-webkit-scrollbar-track {
-
-}
+    box-shadow: inset 0 0 15px #590242;
+} 
 #trending ::-webkit-scrollbar-thumb {
-
+    background: #590242;
+    border-radius: 5px; 
 }
 #trending ::-webkit-scrollbar-thumb:hover {
-
+    background: #020659;
 }
 #playlists ::-webkit-scrollbar, #curated ::-webkit-scrollbar {
-
+    width: 15px;
 }
-#playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track  {
-
+#playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 15px #020659;
 }
 #playlists ::-webkit-scrollbar-thumb, #curated ::-webkit-scrollbar-thumb {
-
+    background: #020659;
+    border-radius: 5px;
 }
 #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
-
+    background: #FFFFFF;
 }
-
-h1 {font-size:1.25em;}
-h2, h3 {font-size: 1em;}
-p, dl, dd {font-size: 1em;}
-footer p {font-size: .75em;}
-font-family: Verdana, Geneva, Tahoma, sans-serif;
